syntax = "proto3";

package protobuf;

option go_package = "/pb";


message Auction {
    string id = 1;
    string title = 2;
    string description = 3;
    int64 organizerID = 4;
    int32 max_participants = 5;
    int32 participants_number = 6;
    string starts_at = 7;
    string ends_at = 8;   
};

message Product{
    string id = 1;
    string auction_id = 2;
    string title = 3;
    string description = 4;
    int64 start_price = 5;
    string category = 6;
    map<string, string> params = 7;
};

message Response {
    string status = 1;
    int32 error_code = 2;
    string error = 3;
};


message CreateAuctionRequest{
    Auction auction = 1;
};

message UpdateAuctionRequest {
    Auction auction = 1;
};

message DeleteAuctionRequest {
    string id = 1;
};

message AddParticipantRequest {
    string auction_id = 1;
    string participant_id = 2;
};

message DeleteParticipantRequest {
    string auction_id = 1;
    string participant_id = 2;
};

message AddProductRequest {
    string auction_id = 1;
    Product product = 2;
};

message UpdateProductRequest {
    string auction_id = 1;
    Product product = 2;
};

message DeletePoductRequest {
    string auction_id = 1;
    string product_id = 2;
};


service AuctionsService{
    rpc CreateAuction (CreateAuctionRequest) returns (Response) {};
    rpc UpdateAuction (UpdateAuctionRequest) returns (Response) {};
    rpc DeleteAuction (DeleteAuctionRequest) returns (Response) {};
    rpc AddParticipant (AddParticipantRequest) returns (Response) {};
    rpc DeleteParticipant (DeleteParticipantRequest) returns (Response) {};
    rpc AddProduct (AddProductRequest) returns (Response) {};
    rpc UpdateProduct (UpdateProductRequest) returns (Response) {};
    rpc DeleteProduct (DeletePoductRequest) returns (Response) {};
};